--- a/spring-boot-rest/pom.xml
+++ b/spring-boot-rest/pom.xml
@@ -44,6 +44,13 @@
             <version>5.1.47</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.12</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
+
 
     </dependencies>
 </project>
