--- a/spring-boot-rest/src/main/resources/application.properties
+++ b/spring-boot-rest/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bookstore
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
