--- a/spring-boot-rest/pom.xml
+++ b/spring-boot-rest/pom.xml
@@ -44,13 +44,17 @@
             <version>5.1.47</version>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>org.apache.kafka</groupId>-->
+            <!--<artifactId>kafka_2.12</artifactId>-->
+            <!--<version>2.2.0</version>-->
+        <!--</dependency>-->
+
         <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka_2.12</artifactId>
-            <version>2.2.0</version>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>2.2.5.RELEASE</version>
         </dependency>
-
-
 
     </dependencies>
 </project>
