--- a/AutomationTemplate/src/main/resources/properties/OR.properties
+++ b/AutomationTemplate/src/main/resources/properties/OR.properties
@@ -1,3 +1,7 @@
 blmBtn=div > div:last-child > .btn.btn-primary.btn-lg
 #Add Customer Test
 addCustButton=button[ng-click='addCust()']
+firstname=input[ng-model='fName']
+lastname=input[ng-model='lName']
+postcode=input[ng-model='postCd']
+addButton=button[type='submit']
