extend report added

--- a/AutomationTemplate/src/main/resources/properties/OR.properties
+++ b/AutomationTemplate/src/main/resources/properties/OR.properties
@@ -1,7 +1,7 @@
-blmBtn=div > div:last-child > .btn.btn-primary.btn-lg
+blmBtn_CSS=div > div:last-child > .btn.btn-primary.btn-lg
 #Add Customer Test
-addCustButton=button[ng-click='addCust()']
-firstname=input[ng-model='fName']
-lastname=input[ng-model='lName']
-postcode=input[ng-model='postCd']
-addButton=button[type='submit']
+addCustButton_CSS=button[ng-click='addCust()']
+firstname_CSS=input[ng-model='fName']
+lastname_XPATH=//input[@ng-model='lName']
+postcode_CSS=input[ng-model='postCd']
+addButton_CSS=button[type='submit']
